--- a/05-react-green-button/index.html
+++ b/05-react-green-button/index.html
@@ -2,7 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>React Hello World!</title>
+  <title>React JSX green button!</title>
+  <style>
+      .app {
+          text-align: center;
+      }
+
+      .green-btn {
+          color: white;
+          background-color: green;
+      }
+  </style>
 </head>
 <body>
 <div id="app">
@@ -11,11 +21,8 @@
 <script src="https://unpkg.com/react@18/umd/react.development.js"></script> <!--подключаем реакт-->
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script><!--подключаем реакт дом-->
-<script type="text/babel">
-  const helloWorldHeading = <h1>Hello from JSX</h1>
-  const container = document.getElementById('app');//находим html with id="app"
-  const root = ReactDOM.createRoot(container);
-  root.render(helloWorldHeading);
+<script src="script.js" type="text/babel">
+
 </script>
 </body>
 </html>
